--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,6 +22,17 @@
   
   .hero-title {
     font-family: 'Days One', sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .nav-item {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 100%;
+    letter-spacing: 0%;
   }
   
 }
