--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,15 +20,16 @@ body {
   overflow-x: hidden;
   width: 100%;
   max-width: 100vw;
+  min-width: 375px;
 }
 
 /* Global max-width constraint for 1920px */
-/* @media (min-width: 1920px) {
+@media (min-width: 1920px) {
   body {
     max-width: 1920px;
     margin: 0 auto;
   }
-} */
+}
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Poppins', sans-serif;
