--- a/frontend/src/components/sections/HeroSection.module.css
+++ b/frontend/src/components/sections/HeroSection.module.css
@@ -215,7 +215,7 @@
 /* Mobile - Small */
 @media (min-width: 375px) and (max-width: 639px) {
   .heroTitle {
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
 }
 
@@ -293,13 +293,13 @@
 
 @media (max-width: 1023px) {
   .ctaSection {
-    align-items: center;
+    align-items: flex-start;
   }
 }
 
 .avatar {
-  width: 5rem;
-  height: 5rem;
+  width: 4rem;
+  height: 4rem;
   object-fit: contain;
   margin-bottom: -0.75rem;
   top: 0px;
